--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "test": "jest",
     "heroku-postbuild": "npm run build"
   },
+  "engines": {
+    "node": "12.x"
+  },
   "lint-staged": {
     "*.{js,vue}": "yarn lint"
   },
