--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "music-player",
   "version": "1.0.0",
-  "description": "my Music player",
-  "author": "Shamil Frontend",
+  "description": "music player",
+  "author": "shamilfrontend and raha-frontend",
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
@@ -26,12 +26,12 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
-    "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/pwa": "^3.0.0-0",
     "bcrypt": "^4.0.1",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "express-validator": "^6.4.0",
+    "jest-serializer-vue": "^2.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.7",
     "node-sass": "^4.13.1",
@@ -51,7 +51,6 @@
     "eslint-plugin-prettier": "^3.1.2",
     "husky": "^4.0.0",
     "jest": "^24.1.0",
-    "jest-serializer-vue": "^2.0.2",
     "lint-staged": "^10.0.0",
     "nodemon": "^1.18.9",
     "prettier": "^1.19.1",
