--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "node": "12.x"
   },
   "lint-staged": {
-    "*.{js,vue}": "yarn lint"
+    "*.{js,vue}": "yarn lint --fix"
   },
   "husky": {
     "hooks": {
@@ -33,7 +33,9 @@
     "express-validator": "^6.4.0",
     "jest-serializer-vue": "^2.0.2",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.9.7",
+    "multer": "^1.4.2",
     "node-sass": "^4.13.1",
     "normalize.css": "^8.0.1",
     "nuxt": "^2.0.0",
