--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express-validator": "^6.4.0",
     "jest-serializer-vue": "^2.0.2",
     "jsonwebtoken": "^8.5.1",
+    "lodash-es": "^4.17.15",
     "moment": "^2.24.0",
     "mongoose": "^5.9.7",
     "multer": "^1.4.2",
