--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/pwa": "^3.0.0-0",
     "bcrypt": "^5.0.0",
+    "cookie": "^0.4.1",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "express-validator": "^6.4.0",
     "jest-serializer-vue": "^2.0.2",
+    "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.0.0",
     "lodash-es": "^4.17.15",
     "moment": "^2.24.0",
     "mongoose": "^5.9.7",
