--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "author": "shamilfrontend and raha-frontend",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
+    "dev": "node server/index.js",
     "build": "nuxt build",
-    "start": "cross-env NODE_ENV=development node server/index.js",
+    "start1": "cross-env NODE_ENV=development node server/index.js",
+    "start": "node server/index.js",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "test": "jest",
