--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "music-player-telegram-webapp",
   "version": "0.0.1",
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "vite build --mode dev",
     "preview": "vite preview",
     "prettier": "prettier --check --ignore-unknown '**/*'",
     "prettier:fix": "prettier --write --ignore-unknown '**/*'"
@@ -15,15 +16,14 @@
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
-    "@qvant/prettier-config": "^0.0.1",
-    "@qvant/stylelint-config": "^0.1.3",
-    "@vitejs/plugin-vue": "^2.0.0",
-    "prettier": "^2.5.1",
-    "sass": "^1.47.0",
-    "stylelint": "^14.2.0",
-    "typescript": "^4.4.4",
-    "vite": "^2.7.2",
-    "vue-tsc": "^0.29.8"
+    "@vitejs/plugin-vue": "^5.0.3",
+    "@vitejs/plugin-legacy": "^5.3.0",
+    "autoprefixer": "^10.4.17",
+    "typescript": "^5.3.3",
+    "happy-dom": "^13.3.5",
+    "sass": "^1.70.0",
+    "terser": "^5.27.0",
+    "vite": "^5.0.12"
   },
   "prettier": "@qvant/prettier-config"
 }
