--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,33 +6,17 @@
     "strict": true,
     "jsx": "preserve",
     "sourceMap": true,
-    "declaration": true,
+    "declaration": false,
     "strictNullChecks": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
+    "verbatimModuleSyntax": true,
+    "useUnknownInCatchVariables": false,
     "lib": ["ESNext", "DOM"],
     "baseUrl": "./",
-    "paths": {
-      "@/*": ["src/*"],
-      "#/types": ["types"],
-      "#/types/*": ["types/*"],
-      "#/tests/*": ["tests/*"]
-    },
-    "types": ["node", "vitest/global", "vite/client"],
+    "types": ["node", "vitest", "vite/client"],
     "plugins": [{ "name": "@vuedx/typescript-plugin-vue" }],
-    "typeRoots": ["./node_modules/@types/", "./types"]
+    "typeRoots": ["./node_modules/@types/", "./node_modules/"]
   },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.d.ts",
-    "src/**/*.tsx",
-    "src/**/*.vue",
-    "types/**/*.d.ts",
-    "types/**/*.ts",
-    "tests/**/*.d.ts",
-    "tests/**/*.ts",
-    "vite.config.ts",
-    "vitest.config.ts"
-  ],
   "exclude": ["node_modules"]
 }
