--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.3",
     "@vitejs/plugin-legacy": "^5.3.0",
+    "@vitejs/plugin-vue": "^5.0.3",
     "autoprefixer": "^10.4.17",
-    "typescript": "^5.3.3",
     "happy-dom": "^13.3.5",
     "sass": "^1.70.0",
     "terser": "^5.27.0",
-    "vite": "^5.0.12"
+    "typescript": "^5.3.3",
+    "vite": "^5.0.12",
+    "vite-plugin-vue-devtools": "^7.3.6"
   },
   "prettier": "@qvant/prettier-config"
 }
